  - Actions: Scale renamed to ScaleBy. Added ScaleTo
  - Actions: Rotate renamed to RotateBy. Added RotateTo
  - Added compositions and actions to scenes and layers
  - Added setup.py and setup.cfg contributed by David Eyk
  - Added Mesh effects:
     Liquid, Sin Shaky, ShakyTiles, ShuffleTiles, QuadMoveBy
     MoveCornerUp, MoveCornerDown, SkewVertical, SkewHorizontal
    
v0.2.0 - March, 21th 2008
  - Director: uses the new pyglet 1.1 loop
  - Director: doesn't have the step() method. Uses on_draw() instead.
  - Director: enable_alpha_blending() is not called automatically
  - Scene: does not have the step() method. Uses on_draw() instead.
  - Layer: step() is called only when it is enabled with Layer.enable_step()
  - Layer: Removed AnimationLayer. No longer necessary.
  - Layer: uses Batch.draw() to draw objects. Propagates the message draw() to the objects it contains.
  - ActionSprite: is a subclass of pyglet.sprite.Sprite
  - ActionSprite: Move() and Goto() uses (x,y) instead of (x,y,0)
  - ActionSprite: removed Animate / Animation (part of pyglet.sprite.Sprite )
  - ActionSprite: uses pyglet.clock.schedule() to generate a ticker.
  - ActionSprite: renamed RepeatMode to RestartMode
  - ActionSprite: Spawn(a,b) + c works as expected
  - Effect: uses draw() and not step() to draw the layer
  - Transition: added enable/disable_step(). Uses draw() to draw subscenes and not step()
  - test/* and samples/* uses the resource.Text and not font.Text
  - test/* added multiline=True in fonts


v0.1.2 - March, 18th 2008
  - ActionSprite: Fixed FadeIn
  - ActionSprite: Spawn(a,b) + c works as expected


v0.1.1 - March, 10th 2008
  - Moved cocos/path_draw.py and cocos/primitives.py to tools/ (created tools dir)
  - Added README in tools/
  - Added this CHANGELOG file
  - [fix] added "max(0,..." to IntervalAction since a negative value could occur under certain circumstances
  - Improved samples/
  - Improved Programming Guide
  - Improved API Reference Guide